# pi-pico-alarmclock-rust

./: .gitignore  .rust-analyzer.toml  Cargo.toml  LICENSE  README.md  build.rs  cargo-generate.toml  flash_wifi_firmware.ps1  flash_wifi_firmware.sh  memory.x  rust-toolchain.toml  web request tester.http
.github/workflows/: ci.yml
.zed/: settings.json
cargo-generate/: Cargo.toml  launch.json  pre-hook.rhai  wifi-blinky.rs
circuit/: circuit.cddx
circuit/pi-pico-alarmclock/: pi-pico-alarmclock.kicad_pcb  pi-pico-alarmclock.kicad_prl  pi-pico-alarmclock.kicad_pro  pi-pico-alarmclock.kicad_sch
config/: time_api.json
enclosure/: gallery.md
src/: event.rs  main.rs  state.rs
src/classes/: btn_mgr.rs  irqs.rs  mod.rs  state_mgr.rs  time_mgr.rs  time_updater.rs  wifi_credentials.rs  wifi_mgr.rs
src/config/: time_api.json
src/drivers/: mod.rs  ws2812.rs
src/task/: alarm_mgr.rs  alarm_settings.rs  alarm_trigger.rs  btn_mgr.rs  button_leds.rs  buttons.rs  dfplayer.rs  display.rs  light_effects.rs  mod.rs  neopixel.rs  orchestrate.rs  peripherals.rs  persisted_alarm_time.rs  power.rs  resources.rs  sound.rs  state.rs  task_messages.rs  time_updater.rs  watchdog.rs
src/tasks/: mod.rs  neopixel.rs  state_mgr.rs  time_updater.rs
src/utility/: mod.rs  persist_utils.rs  persisted_alarm_time.rs  string_utils.rs
src/wifi-firmware/cyw43-firmware/: README.md
tests/: validate_ci.rs
