[package]
edition = "2021"
name = "pi-pico-alarmclock"
version = "0.2.0"
license = "MIT"
resolver = "2"

[dependencies]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
    "tcp",
    "udp",
    "raw",
    "dhcpv4",
    "medium-ethernet",
    "dns",
    "dhcpv4-hostname",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "cd4e199065bef50637d61622318c6dd1b5443f9f", features = [
    "defmt",
    "overclock",
] }

sequential-storage = "3.0.0"
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
ssd1306-async = { git = "https://github.com/kalkyl/ssd1306-async" }
ws2812-async = "0.2.0"
heapless = "0.8"
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
reqwless = { version = "0.12.0", features = ["defmt"] }
tinybmp = "0.6.0"
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
dfplayer-serial = { git = "https://github.com/1-rafael-1/dfplayer-serial", rev = "8ca839af25a1ab3d5bc390954272f657cfdca445" }

[build-dependencies]
serde = "1.0"
serde_json = "1.0"

# cargo build/run
[profile.dev]
lto = 'thin'
codegen-units = 16
debug = 2
debug-assertions = true
incremental = true
opt-level = 's'
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2                # is not flashed to the device
debug-assertions = false
incremental = true
lto = 'fat'
opt-level = 's'
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 's'
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
